--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@ function loadGoogleAnalytics() {
         const script = document.createElement('script');
         script.id = 'gtag';
         script.async = true;
-        script.src = "https://www.googletagmanager.com/gtag/js?id=G-DEKRSE4D4M";
+        script.src = "https://www.googletagmanager.com/gtag/js?id=G-P657K3SGFS";
         document.head.appendChild(script);
         script.onload = function() {
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             window.gtag = gtag;
             gtag('js', new Date());
-            gtag('config', 'G-DEKRSE4D4M');
+            gtag('config', 'G-P657K3SGFS');
         }
     }
 }
