--- a/downloads.HTML
+++ b/downloads.HTML
@@ -4,6 +4,15 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Downloads oficiais e recursos — Futebol</title>
+
+
+<!-- Botões de ação -->
+    <section class="action-buttons">
+  <button onclick="window.location.href='index.html'">Página Inicial</button>
+</section>
+
+
+
   <meta name="description" content="Links oficiais para baixar jogos de futebol, aplicativos, estatísticas e repositórios confiáveis de kits e mods. Não hospedamos arquivos." />
   <style>
     :root{
