--- a/legislacao.html
+++ b/legislacao.html
@@ -71,13 +71,30 @@ footer {
 </head>
 <body>
 
+
+
+
 <header class="header">
+
+
+
   <h1>Política de Privacidade e Direitos</h1>
 </header>
+
+<!-- Botões de ação -->
+    <section class="action-buttons">
+  <button onclick="window.location.href='index.html'">Página Inicial</button>
+</section>
+
 
 <main class="container">
 
   <section class="section">
+
+
+
+
+
     <h2>Conformidade Legal</h2>
     <p>O site <strong>Futebol CMC</strong> está em conformidade com a <strong>Lei Geral de Proteção de Dados (LGPD - Lei nº 13.709/18)</strong> e as políticas de privacidade do <strong>Google AdSense</strong> e <strong>Google Analytics</strong>. Coletamos apenas dados essenciais para o funcionamento do site, exibição de anúncios, personalização de conteúdo, análise de tráfego e melhoria da experiência do usuário.</p>
   </section>
