--- a/quizes04.html
+++ b/quizes04.html
@@ -16,6 +16,13 @@
 <title>Quiz Futebol</title>
 
 
+<!-- Botões de ação -->
+    <section class="action-buttons">
+  <button onclick="window.location.href='index.html'">Página Inicial</button>
+</section>
+
+
+
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1074669766193195"
      crossorigin="anonymous"></script>
 
