--- a/resumo.html
+++ b/resumo.html
@@ -4,6 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>História do Futebol — versão completa</title>
+
+<!-- Botões de ação -->
+    <section class="action-buttons">
+  <button onclick="window.location.href='index.html'">Página Inicial</button>
+</section>
+
+
   <style>
     :root{
       --accent:#1f50a8;
