--- a/index2.html
+++ b/index2.html
@@ -15,6 +15,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quiz Futebol</title>
 
+
+<!-- Botões de ação -->
+    <section class="action-buttons">
+  <button onclick="window.location.href='index.html'">Página Inicial</button>
+</section>
+
 <style>
     body {
         font-family: Arial, sans-serif;
