--- a/noticias-futebol.html
+++ b/noticias-futebol.html
@@ -7,6 +7,13 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
 
+<!-- Botões de ação -->
+    <section class="action-buttons">
+  <button onclick="window.location.href='index.html'">Página Inicial</button>
+</section>
+
+
+
 <style>
 :root {
   --cor-principal: #1f50a8;
