--- a/privacidade.html
+++ b/privacidade.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Política de Privacidade - Futebol Chácara Menino Campeiro</title>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
+
+
+
 <style>
 :root {
   --cor-principal: #1f50a8;
@@ -29,12 +32,22 @@ body { font-family: 'Roboto', sans-serif; margin:0; padding:0; background-color:
 footer { background-color: var(--cor-texto-escuro); color: #ccc; text-align:center; padding:30px 20px; margin-top:auto; }
 @media (max-width:768px) { .container { padding:20px 15px; } .section h2 { font-size:1.3em; } }
 </style>
+
+
+
 </head>
+
+
 <body>
 
 <header class="header">
   <h1>Política de Privacidade</h1>
 </header>
+
+<!-- Botões de ação -->
+    <section class="action-buttons">
+  <button onclick="window.location.href='index.html'">Página Inicial</button>
+</section>
 
 <main class="container">
 
@@ -57,6 +70,11 @@ footer { background-color: var(--cor-texto-escuro); color: #ccc; text-align:cent
       <li>Feeds de notícias e conteúdos de terceiros (vídeos, lives, shorts).</li>
     </ul>
   </section>
+
+
+
+
+
 
   <section class="section">
     <h2>Publicidade e Terceiros</h2>
