--- a/quizes01.html
+++ b/quizes01.html
@@ -15,6 +15,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quiz Futebol</title>
 
+<!-- Botões de ação -->
+    <section class="action-buttons">
+  <button onclick="window.location.href='index.html'">Página Inicial</button>
+</section>
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1074669766193195"
      crossorigin="anonymous"></script>
