--- a/sobrenos.html
+++ b/sobrenos.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sobre Nós - Chácara Menino Campeiro</title>
+
+
+
   <style>
     body {
       margin: 0;
@@ -44,12 +47,30 @@
     }
   </style>
 </head>
+
+
+
 <body>
+
+
+
+
   <header>
     <h1>Sobre Nós</h1>
   </header>
+
+<!-- Botões de ação -->
+    <section class="action-buttons">
+  <button onclick="window.location.href='index.html'">Página Inicial</button>
+</section>
+
   <main>
     <section>
+
+
+
+
+
       <h2>Quem Somos</h2>
       <p>Somos apaixonados por Minecraft e criamos a <strong>Chácara Menino Campeiro</strong> para compartilhar essa paixão com o mundo! Aqui você encontra quizzes, jogos divertidos e vídeos exclusivos do nosso canal no YouTube sobre o universo Minecraft Hardcore.</p>
     </section>
