--- a/regiaosudeste.html.html
+++ b/regiaosudeste.html.html
@@ -242,15 +242,15 @@ document.addEventListener('DOMContentLoaded', fetchNoticiasJogos);
 
 
 
-      <div class="quiz-card"><p>QUIZ 01</p><a href="quizsudeste01.html" target="_blank"><div class="bola-logo cor2"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 02</p><a href="quizsudeste02.html" target="_blank"><div class="bola-logo cor3"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 03</p><a href="quizsudeste03.html" target="_blank"><div class="bola-logo cor4"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 04</p><a href="quizsudeste04.html" target="_blank"><div class="bola-logo cor5"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 05</p><a href="quizsudeste05.html" target="_blank"><div class="bola-logo cor6"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 06</p><a href="quizsudeste06.html" target="_blank"><div class="bola-logo cor7"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 07</p><a href="quizsudeste06.html" target="_blank"><div class="bola-logo cor8"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 08</p><a href="quizsudeste07.html" target="_blank"><div class="bola-logo cor9"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 09</p><a href="quizsudeste08.html" target="_blank"><div class="bola-logo cor10"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 01</p><a href="quizmg01.html" target="_blank"><div class="bola-logo cor2"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 02</p><a href="quizmg02.html" target="_blank"><div class="bola-logo cor3"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 03</p><a href="quizmg03.html" target="_blank"><div class="bola-logo cor4"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 04</p><a href="quizmg04.html" target="_blank"><div class="bola-logo cor5"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 05</p><a href="quizmg05.html" target="_blank"><div class="bola-logo cor6"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 06</p><a href="quizmg06.html" target="_blank"><div class="bola-logo cor7"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 07</p><a href="quizmg07.html" target="_blank"><div class="bola-logo cor8"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 08</p><a href="quizmg08.html" target="_blank"><div class="bola-logo cor9"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 09</p><a href="quizmg09.html" target="_blank"><div class="bola-logo cor10"></div></a></div>
     </section>
 
 
@@ -277,15 +277,15 @@ document.addEventListener('DOMContentLoaded', fetchNoticiasJogos);
 
 
 
-      <div class="quiz-card"><p>QUIZ 01</p><a href="quizsudeste01.html" target="_blank"><div class="bola-logo cor2"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 02</p><a href="quizsudeste02.html" target="_blank"><div class="bola-logo cor3"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 03</p><a href="quizsudeste03.html" target="_blank"><div class="bola-logo cor4"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 04</p><a href="quizsudeste04.html" target="_blank"><div class="bola-logo cor5"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 05</p><a href="quizsudeste05.html" target="_blank"><div class="bola-logo cor6"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 06</p><a href="quizsudeste06.html" target="_blank"><div class="bola-logo cor7"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 07</p><a href="quizsudeste06.html" target="_blank"><div class="bola-logo cor8"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 08</p><a href="quizsudeste07.html" target="_blank"><div class="bola-logo cor9"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 09</p><a href="quizsudeste08.html" target="_blank"><div class="bola-logo cor10"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 01</p><a href="quizrj01.html" target="_blank"><div class="bola-logo cor2"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 02</p><a href="quizrj02.html" target="_blank"><div class="bola-logo cor3"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 03</p><a href="quizrj03.html" target="_blank"><div class="bola-logo cor4"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 04</p><a href="quizrj04.html" target="_blank"><div class="bola-logo cor5"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 05</p><a href="quizrj05.html" target="_blank"><div class="bola-logo cor6"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 06</p><a href="quizrj06.html" target="_blank"><div class="bola-logo cor7"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 07</p><a href="quizrj07.html" target="_blank"><div class="bola-logo cor8"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 08</p><a href="quizrj08.html" target="_blank"><div class="bola-logo cor9"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 09</p><a href="quizrj09.html" target="_blank"><div class="bola-logo cor10"></div></a></div>
     </section>
 
 
@@ -299,15 +299,15 @@ document.addEventListener('DOMContentLoaded', fetchNoticiasJogos);
 
 
 
-      <div class="quiz-card"><p>QUIZ 01</p><a href="quizsudeste01.html" target="_blank"><div class="bola-logo cor2"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 02</p><a href="quizsudeste02.html" target="_blank"><div class="bola-logo cor3"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 03</p><a href="quizsudeste03.html" target="_blank"><div class="bola-logo cor4"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 04</p><a href="quizsudeste04.html" target="_blank"><div class="bola-logo cor5"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 05</p><a href="quizsudeste05.html" target="_blank"><div class="bola-logo cor6"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 06</p><a href="quizsudeste06.html" target="_blank"><div class="bola-logo cor7"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 07</p><a href="quizsudeste06.html" target="_blank"><div class="bola-logo cor8"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 08</p><a href="quizsudeste07.html" target="_blank"><div class="bola-logo cor9"></div></a></div>
-      <div class="quiz-card"><p>QUIZ 09</p><a href="quizsudeste08.html" target="_blank"><div class="bola-logo cor10"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 01</p><a href="quizsp01.html" target="_blank"><div class="bola-logo cor2"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 02</p><a href="quizsp02.html" target="_blank"><div class="bola-logo cor3"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 03</p><a href="quizsp03.html" target="_blank"><div class="bola-logo cor4"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 04</p><a href="quizsp04.html" target="_blank"><div class="bola-logo cor5"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 05</p><a href="quizsp05.html" target="_blank"><div class="bola-logo cor6"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 06</p><a href="quizsp06.html" target="_blank"><div class="bola-logo cor7"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 07</p><a href="quizsp07.html" target="_blank"><div class="bola-logo cor8"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 08</p><a href="quizsp08.html" target="_blank"><div class="bola-logo cor9"></div></a></div>
+      <div class="quiz-card"><p>QUIZ 09</p><a href="quizsp09.html" target="_blank"><div class="bola-logo cor10"></div></a></div>
     </section>
 
 
